--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   margin: 0;
 }
 
-/* header styles */
+/* header style */
 #header {
   font-family: "Inter", sans-serif;
   text-align: center;
